add master dissertation

--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -1,3 +1,13 @@
+@mastersthesis{Uchoa19,
+  author    = {Anderson Gonçalves Uchôa}, 
+  title     = {On Gamifying an Existing Software System: Method, Conceptual Model and Lessons Learned},
+  school    = {Pontifical Catholic University of Rio de Janeiro (PUC-Rio)},
+  year      = {2019},
+  doi = {https://doi.org/10.17771/PUCRio.acad.47298},
+  url       = {Uchoa19.pdf}
+}
+
+
 @inproceedings{PaixaoAADAJA20,
   title={Behind the Intents: An In-depth Empirical Study on Software Refactoring in Modern Code Review},
   author={Paixao, Matheus and Uchôa, Anderson and Bibiano, Ana Carla and Oliveira, Daniel and Garcia, Alessandro and Krinke, Jens and Arnovio, Emilio},
