--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -4,7 +4,7 @@
   school    = {Pontifical Catholic University of Rio de Janeiro (PUC-Rio)},
   year      = {2019},
   doi = {https://doi.org/10.17771/PUCRio.acad.47298},
-  url       = {Uchoa19.pdf}
+  url       = {https://anderson-uchoa.github.io/publications/Uchoa19.pdf}
 }
 
 
