add ICSME paper

--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -7,6 +7,17 @@
   url       = {https://anderson-uchoa.github.io/publications/Uchoa19.pdf}
 }
 
+@inproceedings{UchoaCWPRAC20,
+  title={How Does Modern Code Review Impact Software Design Degradation? An In-depth Empirical Study},
+  author={Uchôa, Anderson and Barbosa, Caio and Oizumi, Willian and Blenílio, Publio and Lima, Rafael and Garcia, Alessandro and Bezerra, Carla},
+  booktitle={Proceedings of the 36th International Conference on Software Maintenance and Evolution (ICSME), 2020, Adelaide, Australia, Sept 27-Oct 3},
+  pages={1 -- 12},
+  year={2020},
+abstract={Software design is an important concern in modern code review through which multiple developers actively discuss and improve each single code change. However, there is little understanding of the impact of such developers' reviews on continuously reducing design degradation over time. It is even less clear to what extent and how design degradation is reversed during the process of each single code change's review. In summary, existing studies have not assessed how the process of design degradation evolution is impacted along: (i) within each single review, and (ii) across multiple reviews. As a consequence, one cannot understand how certain code review practices consistently contribute to either reduce or further increase design degradation as the project evolves. We aim at addressing these gaps through a multi-project retrospective study. By investigating 14,971 code reviews from seven software projects, we report the first study that characterizes how the process of design degradation evolves within each review and across multiple reviews. Moreover, we analyze a comprehensive suite of metrics to enable us to observe the influence of certain code review practices on combating or even accelerating design degradation. Our results show that the majority of code reviews had little to no design degradation impact in the analyzed projects. Even worse, this observation also applies, to some extent, to reviews with an explicit concern on design. Surprisingly, the practices of long discussions and high proportion of review disagreement in code reviews were found to increase design degradation. Finally, we also discuss how the study findings shed light on how to improve the research and practice of modern code review.},	
+ organization={IEEE},
+  note={<font color="red">Accepted for Publication (to appear)</font>}
+}
+
 
 @inproceedings{PaixaoAADAJA20,
   title={Behind the Intents: An In-depth Empirical Study on Software Refactoring in Modern Code Review},
