add publications of SBES 2020

--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -1,3 +1,26 @@
+@inproceedings{JABA20,
+  title={Are Code Smell Co-occurrences Harmful to Internal Quality Attributes? A Mixed-Method Study},
+  author={Martins, Júlio and Uchôa, Anderson and Bezerra, Carla and Garcia, Alessandro},
+  booktitle={Proceedings of the 34th Brazilian Symposium on Software Engineering (SBES), 2020, Natal, Brazil, Oct 19-23},
+  pages={1 -- 10},
+  year={2020},
+  abstract={Previous studies demonstrated how code smells (i.e., symptoms of the presence of system degradation) impact the software maintainability. However, few studies have investigated which code smell types tend to co-occur in the source code. Moreover, it is not clear to what extent the removal of code smell co-occurrences -- through refactoring operations -- has a positive impact on quality attributes such as cohesion, coupling, inheritance, complexity, and size. We aim at addressing these gaps through an empirical study. By investigating the impact of the smells co-occurrences in 11 releases of 3 closed-source systems, we observe (i) which code smells tend to co-occur together, (ii) the impact of the removal of code smell co-occurrences on quality internal attributes before and after refactoring, and (iii) which are the most difficult co-occurrences to refactoring from the developers perspective. Our results show that 5 types of code smell generally tend to co-occur (e.g, Feature Envy, and Long Method). Moreover, we observed that the removal of code smells co-occurrences lead to a significant reduction in the complexity of the systems studied was obtained. Conversely, cohesion, coupling, and inheritance tend to increase. Based on our findings, we argue that further research is needed on the impact of co-occurrences of code smells on internal quality attributes.},	
+ organization={ACM Press},
+  note={<font color="red">Accepted for Publication (to appear)</font>}
+}
+
+@inproceedings{CAFDHGAFMVL20,
+  title={Revealing the Social Aspects of Design Decay: A Retrospective Study of Pull Requests},
+  author={Barbosa, Caio and Uchôa, Anderson and Falcao, Filipe and  Coutinho, Daniel and Brito, Hyago and Amaral, Guilherme and Garcia, Alessandro, and Fonseca, Baldoino, and Ribeiro, Marcio and Soares, Vinicius and Sousa, Leonardo},
+  booktitle={Proceedings of the 34th Brazilian Symposium on Software Engineering (SBES), 2020, Natal, Brazil, Oct 19-23},
+  pages={1 -- 10},
+  year={2020},
+  abstract={The pull-based development model, popularized by social coding environments like GitHub, is widely used by open-source communities. In this model, developers actively communicate and share their knowledge or opinions through the exchange of comments. Their goal is to improve the change under development, including its positive impact on design structure. In this context, two central social aspects may contribute to combating or adversely amplifying design decay. First, design decay may be avoided, reduced or accelerated depending whether the communication dynamics among developers -- who play specific roles -- is fluent and consistent along a change. Second, the discussion content itself may be decisive to either improve or deteriorate the structural design of a system. Unfortunately, it has not been studied so far the role these key social aspects play on avoiding or amplifying design decay. Previous work either investigates technical aspects of design decay or confirms the high frequency of design discussions in pull-based software development. This paper reports a retrospective study aimed at understanding the role of communication dynamics and discussion content on design decay. We focused our analysis on 11 social metrics related to these two aspects as well as 4 control technical metrics typically used as indicators of design decay. We analyzed more than 11k pull request discussions mined from five large open-source software systems. Our findings reveal that many social metrics can be used to discriminate between design impactful and unimpactful pull requests. Second, various factors of communication dynamics are related to design decay. However, temporal factors of communication dynamics outperformed the participant roles' factors as indicators of design decay. Finally, we noticed certain social metrics tend to be indicators of design decay when analyzing both aspects together.},	
+ organization={ACM Press},
+  note={<font color="red">Accepted for Publication (to appear)</font>}
+}
+
+
 @inproceedings{UchoaCWPRAC20,
   title={How Does Modern Code Review Impact Software Design Degradation? An In-depth Empirical Study},
   author={Uchôa, Anderson and Barbosa, Caio and Oizumi, Willian and Blenílio, Publio and Lima, Rafael and Garcia, Alessandro and Bezerra, Carla},
