--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -1,4 +1,4 @@
-@inproceedings{JABA20,
+@inproceedings{MartinsABA20,
   title={Are Code Smell Co-occurrences Harmful to Internal Quality Attributes? A Mixed-Method Study},
   author={Martins, Júlio and Uchôa, Anderson and Bezerra, Carla and Garcia, Alessandro},
   booktitle={Proceedings of the 34th Brazilian Symposium on Software Engineering (SBES), 2020, Natal, Brazil, Oct 19-23},
@@ -9,9 +9,9 @@
   note={<font color="red">Accepted for Publication (to appear)</font>}
 }
 
-@inproceedings{CAFDHGAFMVL20,
+@inproceedings{BarbosaAFDHGAFMVL20,
   title={Revealing the Social Aspects of Design Decay: A Retrospective Study of Pull Requests},
-  author={Barbosa, Caio and Uchôa, Anderson and Falcao, Filipe and  Coutinho, Daniel and Brito, Hyago and Amaral, Guilherme and Garcia, Alessandro, and Fonseca, Baldoino, and Ribeiro, Marcio and Soares, Vinicius and Sousa, Leonardo},
+  author={Barbosa, Caio and Uchôa, Anderson and Falcao, Filipe and Coutinho, Daniel and Brito, Hyago and Amaral, Guilherme and Garcia, Alessandro, and Fonseca, Baldoino, and Ribeiro, Marcio and Soares, Vinicius and Sousa, Leonardo},
   booktitle={Proceedings of the 34th Brazilian Symposium on Software Engineering (SBES), 2020, Natal, Brazil, Oct 19-23},
   pages={1 -- 10},
   year={2020},
@@ -46,7 +46,7 @@
 @inproceedings{PaixaoAADAJA20,
   title={Behind the Intents: An In-depth Empirical Study on Software Refactoring in Modern Code Review},
   author={Paixao, Matheus and Uchôa, Anderson and Bibiano, Ana Carla and Oliveira, Daniel and Garcia, Alessandro and Krinke, Jens and Arnovio, Emilio},
-  booktitle={Proceedings of the 17th International Conference on Mining Software Repositories (MSR)},
+  booktitle={Proceedings of the 17th International Conference on Mining Software Repositories (MSR), 2020, Seoul, South Korea, May},
   pages={1 -- 11},
   year={2020},
 abstract={Code refactorings are of pivotal importance in modern code review. Developers may preserve, revisit, add or undo refactorings through changes' revisions. Their goal is to certify that the driving intent of a code change is properly achieved. Developers' intents behind refactorings may vary from pure structural improvement to facilitating feature additions and bug fixes. However, there is little understanding of the refactoring practices performed by developers during the code review process. It is also unclear whether the developers’ intents influence the selection, composition, and evolution of refactorings during the review of a code change. Through mining 1,780 reviewed code changes from 6 systems pertaining to two large open-source communities, we report the first in-depth empirical study on software refactoring during code review. We inspected and classified the developers’ intents behind each code change into 7 distinct categories. By analyzing data generated during the complete reviewing process, we observe: (i) how refactorings are selected, composed and evolved throughout each code change, and (ii) how developers' intents are related to these decisions. For instance, our analysis shows developers regularly apply non-trivial sequences of refactorings that crosscut multiple code elements (i.e., widely scattered in the program) to support a single feature addition. Moreover, we observed that new developers’ intents commonly emerge during the code review process, influencing how developers select and compose their refactorings to achieve the new and adapted goals. Finally, we provide an enriched dataset that allows researchers to investigate the context and motivations behind refactoring operations during the code review process.},	
@@ -58,7 +58,7 @@ url = {https://anderson-uchoa.github.io/publications/PaixaoAADAJA20.pdf},
 @inproceedings{SousaAECJMRA19,
   title={REM4DSPL: A Requirements Engineering Method for Dynamic Software Product Lines},
   author={Sousa, Amanda and Uchôa, Anderson and Fernandes, Eduardo and Bezerra, Carla IM and Monteiro, José Maria and Andrade, Rossana},
-  booktitle={Proceedings of the XVIII Brazilian Symposium on Software Quality (SBQS)},
+  booktitle={Proceedings of the XVIII Brazilian Symposium on Software Quality (SBQS), 2019, Fortaleza, Brazil, Oct 28-Nov 1},
   pages={129--138},
   year={2019},
 abstract={Context: Dynamic Software Product Line (DSPL) is a set of software products capable of self-adapt and configure in run-time. DSPL products have common features (commonalities) and varying features (managed in run-time according to context changes). Objective: DSPL requirements engineering is challenging. Requirements engineers have to carefully plan self-adaptation while eliciting, modeling, and managing variability requirements. This paper introduces a method for DSPL requirements engineering. Method: We relied on empirically-derived activities of DSPL requirements engineering to build our method. We selected techniques and templates used in other domains such as SPL for refinement and incorporation into the method. We asked DSPL experts on the method applicability. Result: We introduced the Requirements Engineering Method for DSPL (REM4DSPL). Elicitation is guided by supervised discussions. Modeling relies on feature models. Variability Management is tool-assisted and validated via feature model inspection. DSPL experts agreed on the method applicability and suggested improvements. Conclusion: REM4DSPL relies on empirically-derived activities, techniques that have been successfully used by previous work, and templates adapted to the DSPL context. We expect our method to guide requirements engineers in practice.},	
@@ -70,7 +70,7 @@ url = {https://anderson-uchoa.github.io/publications/SousaAECJMRA19.pdf}
 @inproceedings{deMelloARWJKDBA19,
   title={Do Research and Practice of Code Smell Identification Walk Together? A Social Representations Analysis},
   author={Rafael de Mello and Anderson Uchôa and Roberto Oliveira and Willian Oizumi and Jairo Souza and Kleyson Mendes and Daniel Oliveira and Baldoino Fonseca and Alessandro Garcia},
-  booktitle={Proceedings of the 13th International Symposium on Empirical Software Engineering and Measurement (ESEM)},
+  booktitle={Proceedings of the 13th International Symposium on Empirical Software Engineering and Measurement (ESEM), 2019, Porto de Galinhas, Brazil, Sept 19-20.},
   pages={1--6},
   year={2019},
 abstract={Context: It is frequently claimed the need for bridging the gap between software engineering research and practice. In this sense, the theory of social representations may be useful to characterize the actual concerns of software developers. It comprises the system of values, behaviors, and practices of communities regarding a particular social object, such as the task of smell identification. Aim: To characterize the social representations of smell identification by software developers. Method: Based on the answers given to a questionnaire, we analyzed the associations made by the developers about smell identification, i.e., what immediately comes to their minds when they think about this task. Results: We found that developers strongly associate smell identification with the practice of smell removal and with the incidence of bugs. They also frequently associate the task with the practice of inspection and with the need of having individual skills. Besides, we verified that the current state of the art on smell identification partially address the social representations of the software developers. Conclusion: There is a considerable gap between the research of smell identification and its practice. We propose directions to mitigating this gap.},
