--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -1,3 +1,15 @@
+@inproceedings{SoaresOFBCGVSOU20,
+  title={On the Relation between Complexity, Explicitness, Effectiveness of Refactorings and Non-Functional Concerns},
+  author={Soares, Vinícius and Oliveira, Anderson and Farah, Paulo and Bibiano, Ana and Coutinho, Daniel and Garcia, Alessandro and Vergilio, Silvia and Schots, Marcelo and Oliveira, Daniel and Uchôa, Anderson},
+  booktitle={Proceedings of the 34th Brazilian Symposium on Software Engineering (SBES), 2020, Natal, Brazil, Oct 19-23},
+  pages={1 -- 10},
+  year={2020},
+  abstract={Developers need to consistently improve the internal structural quality of a program to address its maintainability and possibly other non-functional concerns. Refactoring is the main practice to improve code quality. Typical refactoring factors, such as their complexity and explicitness (i.e., their self-affirmation), may influence its effectiveness in improving key internal code attributes, such as enhancing cohesion or reducing its coupling, complexity and size. However, we still lack an understanding of whether such concerns and factors play a role on improving the code structural quality. Thus, this paper investigates the relationship between complexity, explicitness and effectiveness of refactorings and non-functional concerns in four projects. We study four non-functional concerns, namely maintainability, security, performance, and robustness. Our findings reveal that complex refactorings indeed have an impactful effect on the code structure, either improving or reducing the code structural quality. We also found that both self-affirmed refactorings and non-functional concerns are usually accompanied by complex refactorings, but tend to have a negative effect on code structural quality. Our findings can: (i) help researchers to improve the design of empirical studies and refactoring-related tools, and (ii) warn practitioners on which circumstances their refactorings may cause a negative impact on code quality.},
+ organization={ACM Press},
+  note={<font color="red">Accepted for Publication (to appear)</font>}
+}
+
+
 @inproceedings{MartinsABA20,
   title={Are Code Smell Co-occurrences Harmful to Internal Quality Attributes? A Mixed-Method Study},
   author={Martins, Júlio and Uchôa, Anderson and Bezerra, Carla and Garcia, Alessandro},
