--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -1,3 +1,15 @@
+
+@inproceedings{LimaUCCL20,
+  title={Visualizing the Maintainability of Feature Models in SPLs},
+  author={Soares, Vinícius and Oliveira, Anderson and Farah, Paulo and Bibiano, Ana and Coutinho, Daniel and Garcia, Alessandro and Vergilio, Silvia and Schots, Marcelo and Oliveira, Daniel and Uchôa, Anderson},
+  booktitle={Proceedings of the 8th Workshop on Software Visualization, Evolution and Maintenance (VEM 2020), 2020, Natal, Brazil, Oct 19},
+  pages={1 -- 10},
+  year={2020},
+  abstract={This paper presents data visualizations obtained from the application of 15 measures used to support the maintainability evaluation of Software Product Line (SPL) and Dynamic SPL (DSPL) Feature Models (FMs). To identify these visualizations, we applied a survey to classify a set of 40 measures for evaluating the (D)SPL FMs maintainability. Five visualizations were designed from this classification to analyze the extensibility, static variability, dynamic variability, and structural complexity of the FMs. As result, the experts concluded the designed visualizations assist in FMs maintainability interpretation.},
+  note={<font color="red">Accepted for Publication (to appear)</font>}
+}
+
+
 @inproceedings{SoaresOFBCGVSOU20,
   title={On the Relation between Complexity, Explicitness, Effectiveness of Refactorings and Non-Functional Concerns},
   author={Soares, Vinícius and Oliveira, Anderson and Farah, Paulo and Bibiano, Ana and Coutinho, Daniel and Garcia, Alessandro and Vergilio, Silvia and Schots, Marcelo and Oliveira, Daniel and Uchôa, Anderson},
@@ -36,7 +48,7 @@
 
 @inproceedings{UchoaCWPRAC20,
   title={How Does Modern Code Review Impact Software Design Degradation? An In-depth Empirical Study},
-  author={Uchôa, Anderson and Barbosa, Caio and Oizumi, Willian and Blenílio, Publio and Lima, Rafael and Garcia, Alessandro and Bezerra, Carla},
+  author={Uchôa, Anderson and Barbosa, Caio and Oizumi, Willian and Blenilio, Publio and Lima, Rafael and Garcia, Alessandro and Bezerra, Carla},
   booktitle={Proceedings of the 36th International Conference on Software Maintenance and Evolution (ICSME), 2020, Adelaide, Australia, Sept 27-Oct 3},
   pages={1 -- 12},
   year={2020},
