--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -1,7 +1,7 @@
 
 @inproceedings{LimaUCCL20,
   title={Visualizing the Maintainability of Feature Models in SPLs},
-  author={Soares, Vinícius and Oliveira, Anderson and Farah, Paulo and Bibiano, Ana and Coutinho, Daniel and Garcia, Alessandro and Vergilio, Silvia and Schots, Marcelo and Oliveira, Daniel and Uchôa, Anderson},
+  author={Lima, Luan and Uchôa, Anderson and Bezerra, Carla and Coutinho, Emanuel and Rocha, Lincoln},
   booktitle={Proceedings of the 8th Workshop on Software Visualization, Evolution and Maintenance (VEM 2020), 2020, Natal, Brazil, Oct 19},
   pages={1 -- 10},
   year={2020},
