--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -5,8 +5,9 @@
   pages={1 -- 12},
   year={2021},
   abstract={Companies have adopted modern code review as a key technique for continuously monitoring and improving the quality of software changes. One of the main motivations for this is the early detection of design impactful changes, to prevent that design-degrading ones prevail after each code review. Even though design degradation symptoms often lead to changes' rejections, practices of modern code review alone are actually not sufficient to avoid or mitigate design decay. Software design degrades whenever one or more symptoms of poor structural decisions, usually represented by smells, end up being introduced by a change. Design degradation may be related to both technical and social aspects in collaborative code reviews. Unfortunately, there is no study that investigates if code review stakeholders, e.g, reviewers, could benefit from approaches to distinguish and predict design impactful changes with technical and/or social aspects. By analyzing 57,498 reviewed code changes from seven open-source systems, we report an investigation on prediction of design impactful changes in modern code review. We evaluated the use of six ML algorithms to predict design impactful changes. We also extracted and assessed 41 different features based on both social and technical aspects. Our results show that Random Forest and Gradient Boosting are the best algorithms. We also observed that the use of technical features results in more precise predictions. However, the use of social features alone, which are available even before the code review starts (e.g., for team managers or change assigners), also leads to highly-accurate prediction. Therefore social and/or technical prediction models can be used to support further design inspection of suspicious changes early in a code review process. Finally, we provide an enriched dataset that allows researchers to investigate the context behind design impactful changes during the code review process.},
+  organization={IEEE Press},
   url={https://anderson-uchoa.github.io/publications/UchoaBCOARVAPOG21.pdf},
-  organization={IEEE Press}
+  doi = {10.1109/MSR52588.2021.00059}
 }
 
 @inproceedings{LimaUCCL20,
@@ -16,9 +17,9 @@
   pages={1 -- 8},
   year={2020},
   abstract={This paper presents data visualizations obtained from the application of 15 measures used to support the maintainability evaluation of Software Product Line (SPL) and Dynamic SPL (DSPL) Feature Models (FMs). To identify these visualizations, we applied a survey to classify a set of 40 measures for evaluating the (D)SPL FMs maintainability. Five visualizations were designed from this classification to analyze the extensibility, static variability, dynamic variability, and structural complexity of the FMs. As result, the experts concluded the designed visualizations assist in FMs maintainability interpretation.},
-  url={https://anderson-uchoa.github.io/publications/LimaUCCL20.pdf}
+  url={https://anderson-uchoa.github.io/publications/LimaUCCL20.pdf},
+  doi = {10.5753/vem.2020.14522},
 }
-
 
 @inproceedings{SoaresOFBCGVSOU20,
   title={On the Relation between Complexity, Explicitness, Effectiveness of Refactorings and Non-Functional Concerns},
@@ -32,7 +33,6 @@
   doi = {10.1145/3422392.3422439}
 }
 
-
 @inproceedings{MartinsABA20,
   title={Are Code Smell Co-occurrences Harmful to Internal Quality Attributes? A Mixed-Method Study},
   author={Martins, Júlio and Uchôa, Anderson and Bezerra, Carla and Garcia, Alessandro},
@@ -44,7 +44,6 @@
   url={https://anderson-uchoa.github.io/publications/MartinsABA20.pdf},
   doi = {10.1145/3422392.3422419}
 }
-
 
 @inproceedings{BarbosaAFDHGAFMVL20,
   title={Revealing the Social Aspects of Design Decay: A Retrospective Study of Pull Requests},
@@ -58,7 +57,6 @@
   doi = {10.1145/3422392.3422443}
 }
 
-
 @inproceedings{UchoaCWPRAC20,
   title={How Does Modern Code Review Impact Software Design Degradation? An In-depth Empirical Study},
   author={Uchôa, Anderson and Barbosa, Caio and Oizumi, Willian and Blenilio, Publio and Lima, Rafael and Garcia, Alessandro and Bezerra, Carla},
@@ -71,7 +69,6 @@
   doi = {10.1109/ICSME46990.2020.00055}
 }
 
-
 @mastersthesis{Uchoa19,
   author    = {Anderson Gonçalves Uchôa}, 
   title     = {On Gamifying an Existing Software System: Method, Conceptual Model and Lessons Learned},
@@ -80,7 +77,6 @@
   doi = {https://doi.org/10.17771/PUCRio.acad.47298},
   url       = {https://anderson-uchoa.github.io/publications/Uchoa19.pdf}
 }
-
 
 @inproceedings{PaixaoAADAJA20,
   title={Behind the Intents: An In-depth Empirical Study on Software Refactoring in Modern Code Review},
@@ -106,7 +102,6 @@ url = {https://anderson-uchoa.github.io/publications/SousaAECJMRA19.pdf},
 doi = {10.1145/3364641.3364656}
 }
 
-
 @inproceedings{deMelloARWJKDBA19,
   title={Do Research and Practice of Code Smell Identification Walk Together? A Social Representations Analysis},
   author={Rafael de Mello and Anderson Uchôa and Roberto Oliveira and Willian Oizumi and Jairo Souza and Kleyson Mendes and Daniel Oliveira and Baldoino Fonseca and Alessandro Garcia},
@@ -118,7 +113,6 @@ publisher={IEEE Press},
 url = {https://anderson-uchoa.github.io/publications/deMelloARWJKDBA19.pdf},
 doi = {10.1109/ESEM.2019.8870141}
 }
-
 
 @inproceedings{deMelloARDWJBA2019,
   title={Investigating the Social Representations of the Identification of Code Smells by Practitioners and Students from Brazil},
@@ -132,8 +126,6 @@ url = {https://anderson-uchoa.github.io/publications/deMelloARDWJBA19.pdf},
 doi = {10.1145/3350768.3351794}
 }
 
-
-
 @inproceedings{FernandesAAA19,
   title={On the Alternatives for Composing Batch Refactoring},
   author={Eduardo Fernandes and Anderson Uchôa and Ana Carla Bibiano and Alessandro Garcia},
@@ -145,8 +137,6 @@ url = {https://anderson-uchoa.github.io/publications/FernandesAAA19.pdf},
 doi = {10.1109/IWoR.2019.00009},
 publisher={IEEE Press}
 }
-
-
 
 @inproceedings{deMelloARDBAF19,
   title={Investigating the Social Representations of Code Smell Identification: A Preliminary Study},
@@ -160,7 +150,6 @@ doi = {10.1109/CHASE.2019.00022},
 publisher={IEEE Press}
 }
 
-
 @inproceedings{UchoaEBRCGAL19,
   title={On Gamifying an Existing Healthcare System: Method, Conceptual Model and Evaluation},
   author={Anderson Uchôa and Eduardo Fernandes and Baldoino Fonseca and Rafael de Mello and Caio Barbosa and Gabriel Nunes and Alessandro Garcia and Leopoldo Teixeira},
@@ -172,7 +161,6 @@ url = {https://anderson-uchoa.github.io/publications/UchoaEBRCGAL19.pdf},
 doi = {10.1109/SEH.2019.00009},
 publisher={IEEE Press}
 }
-
 
 @inproceedings{JulioCA19,
  title={Analyzing the Impact of Inter-smell Relations on Software Maintainability: An Empirical Study with Software Product Lines},
@@ -186,7 +174,6 @@ doi = {10.1145/3330204.3330254},
 publisher={ACM}
 }
 
-
 @inproceedings{FernandesALARLDABL19,
   title={VazaZika: A Software Platform for Surveillance and Control of Mosquito-Borne Diseases},
   author={Eduardo Fernandes and Anderson Uchôa and Leonardo Sousa and Anderson Oliveira and Rafael de Mello and Luiz Paulo Barroca and Diogo Carvalho and Alessandro Garcia and Baldoino Fonseca and Leopoldo Teixeira},
@@ -198,7 +185,6 @@ url = {https://anderson-uchoa.github.io/publications/FernandesALARLDABL19.pdf},
 doi = {10.1007/978-3-030-14070-0_89},
 publisher={Springer}
 }
-
 
 @inproceedings{FerreiraIEDAAAJFGCBR18,
  author = {Ferreira, Isabella and Fernandes, Eduardo and Cedrim, Diego and Uchôa, Anderson and Bibiano, Ana Carla and Garcia, Alessandro and Correia, João Lucas and Santos, Filipe and Nunes, Gabriel and Barbosa, Caio and Fonseca, Baldoino and de Mello, Rafael},
@@ -219,7 +205,6 @@ doi = {10.1145/3183440.3195030},
  keywords = {bug proneness, empirical study, refactoring, software maintenance},
 }
 
-
 @article{SousaLRDAPAAA18,
 title = "VazaDengue: An information system for preventing and combating mosquito-borne diseases with social networks",
 journal = "Information Systems",
@@ -234,7 +219,6 @@ keywords = "Dengue, Mosquito, Social media, Surveillance, Tweets",
 abstract = "Dengue is a disease transmitted by the Aedes Aegypti mosquito, which also transmits the Zika virus and Chikungunya. Unfortunately, the population of different countries has been suffering from the diseases transmitted by this mosquito. The communities should play an important role in combating and preventing the mosquito-borne diseases. However, due to the limited engagement of the population, new solutions need to be used to strengthen the mosquito surveillance. VazaDengue is one of these solutions, which offers the users a web and mobile platform for preventing and combating mosquito-borne diseases. The system relies on social actions of citizens reporting mosquito breeding sites and dengue cases, in which the reports are made available to the community and health agencies. In order to address the limited population engagement, the system proactively monitors social media network as Twitter to enrich the information provided by the system. It processes the natural language text from the network to classify the tweets according to a set of predefined categories. After the classification, the relevant tweets are provided to the users as reports. In this paper, we describe the VazaDengue features including its ability to harvest and classify tweets. Since the VazaDengue system aims to strengthen the entomological surveillance of the mosquito that transmits Dengue, Zika, and Chikungunya by providing geolocated reports, we present here two studies to evaluate its potential contributions. The first evaluation uses a survey conducted in the Brazilian community of health agents. The goal is to evaluate the relevance of the classified tweets according to the health agents’ perspective. The second study compares the official reports of the 2015–2016 epidemic waves in Brazil with the concentration of mosquito-related tweets found by VazaDengue. The goal is to verify if the concentration of tweets can be used for monitoring the mosquito manifestation in big cities. The results of these two evaluations are encouraging. For instance, we have found that the health agents tend to agree with the relevance of the classified tweets. Moreover, the concentration of tweets is likely to be effective for monitoring big cities. The results of these evaluations are helping us to improve the VazaDengue system further. These improvements will make the VazaDengue system even more useful for combating and preventing the mosquito-borne diseases."
 }
 
-
 @inproceedings{UchoaFBA17,
   title={Do Coupling Metrics Help Characterize Critical Components in Component-based SPL? An Empirical Study},
   author={Uchôa, Anderson and Fernandes, Eduardo and Bibiano, Ana Carla and Garcia, Alessandro},
@@ -244,7 +228,6 @@ abstract = "Dengue is a disease transmitted by the Aedes Aegypti mosquito, which
   abstract={In component-based software product lines (SPL), each component has to encapsulate features, restrict data access, and be replaceable. For critical components, with multiple features and dependencies, these criteria are fundamental for flexible product configuration. Previous work assume that coupling metrics help characterize critical components, but we lack empirical evidence for that assumption. By characterizing critical components, we could help developers identify components that require careful maintenance and evolution. This paper relies on five well-known coupling metrics to compose a strategy for characterizing critical components in component-based SPLs. Our results suggest reasonable strategy’s accuracy but the need for using additional metrics.},
 url={https://anderson-uchoa.github.io/publications/UchoaFBA17.pdf}	
 }
-
 
 @inproceedings{UchoaMMMC17,
 author="Uchôa, Anderson G.
@@ -291,14 +274,12 @@ url="https://anderson-uchoa.github.io/publications/UchoaPMMC17.pdf"
  url={https://anderson-uchoa.github.io/publications/UchoaM16.pdf}
 }
 
-
 @misc{UchoaR16,
-  author       = {Anderson Gonçalves Uchôa}, 
-  title        = {ReMINDER: Uma Abordagem para Modelagem de Propriedades Não-Funcionais em Linhas de Produto de Software Dinâmicas},
-  note       = {BSc Thesis, Federal University of Ceará (UFC)},
-  year         = {2016},
-  url       = {https://anderson-uchoa.github.io/publications/UchoaR16.pdf}
+  author={Anderson Gonçalves Uchôa},
+  title={ReMINDER: Uma Abordagem para Modelagem de Propriedades Não-Funcionais em Linhas de Produto de Software Dinâmicas},
+  note={BSc Thesis, Federal University of Ceará (UFC)},
+  year={2016},
+  abstract = {Linhas de Produto de Software (LPS) representam um conjunto de sistemas de software que compartilham de um conjunto de features comuns e gerenciadas, que satisfazem as necessidades de um segmento de mercado particular ou missão. No entanto, a representação de variabilidade dos produtos gerados por LPSs é feita apenas de forma estática, ou seja, a adaptação ocorre em tempo de projeto. Contudo, com o surgimento de sistemas sensíveis ao contexto, a construção de sistemas tem se tornado mais complexa, dado as mudanças de requisitos e restrições conforme o ambiente no qual está inserido, exigindo um alto grau de adaptação em tempo de execução. Esses sistemas podem ser conceitualizados como Linhas de Produtos de Software Dinâmica (LPSD). Um dos desafios para construir um LPSD é desenvolver um mecanismo para incorporar cenários com adaptações de contexto e propriedades não-funcionais (PNFs). Para incorporar esses mecanismo ao modelo de features de LPSDs, uma boa estratégia consiste em utilizar uma abordagem para guiar a identificação e representação destes mecanismos. Neste cenário, o objetivo deste trabalho é representar PNFs e cenários de adaptações de contexto em modelos de features de LPSDs. Para isso, foi elaborada uma abordagem capaz de identificar PNFs, restrições e cenários de adaptações de contexto, ativação e desativação de features, denominada ReMINDER. Também foi desenvolvida uma extensão da ferramenta DyMMer, para suportar a abordagem. Para avaliação da abordagem e da ferramenta, foram realizados dois estudos. O primeiro foi um experimento controlado, para analisar o processo definido na abordagem ReMINDER, com a finalidade de caracterizar a sua aplicação, em relação à identificação de PNFs e cenários de adaptações de contexto, com suas respectivas restrições, para apoiar a modelagem de features e representação de PNFs em modelos de features de LPSDs. O segundo estudo foi a aplicação de um teste de usabilidade. Esse teste teve como objetivo avaliar a usabilidade da ferramenta estendida por meio da análise de quatro fatores: i) satisfação geral; ii) usabilidade da ferramenta; iii) qualidade da informação; e iv) qualidade da interface. De modo geral, após a análise e interpretação de todos os resultados obtidos, conclui-se que a abordagem auxiliou na identificação das PNFs e a sua relação com o comportamento do modelo de features por meio de restrições de interdependência. Além disso, também foi verificado que a ferramenta estendida possui um boa usabilidade, sendo útil para operacionalização da abordagem.},
+  url={https://anderson-uchoa.github.io/publications/UchoaR16.pdf},
+  doi = {http://www.repositorio.ufc.br/handle/riufc/24885}
 }
-
-
-
