--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -1,3 +1,12 @@
+@inproceedings{uchoa2021unveiling,
+  title={Unveiling Multiple Facets of Design Degradation in Modern Code Review},
+  author={Uchôa, Anderson},
+  booktitle={29th ESEC/FSE},
+  pages={1--5},
+  note={<font color="red">To appear!</font>},
+  year={2021},
+}
+
 @inproceedings{UchoaBCOARVAPOG21,
   title={Predicting Design Impactful Changes in Modern Code Review: A Large-Scale Empirical Study},
   author={Uchôa, Anderson and Barbosa, Caio and Coutinho, Daniel and Oizumi, Willian and K. G. Assunção, Wesley and Regina Vergilio, Silvia and Alves Pereira, Juliana and Oliveira, Anderson and Garcia, Alessandro},
@@ -6,6 +15,7 @@
   year={2021},
   abstract={Companies have adopted modern code review as a key technique for continuously monitoring and improving the quality of software changes. One of the main motivations for this is the early detection of design impactful changes, to prevent that design-degrading ones prevail after each code review. Even though design degradation symptoms often lead to changes' rejections, practices of modern code review alone are actually not sufficient to avoid or mitigate design decay. Software design degrades whenever one or more symptoms of poor structural decisions, usually represented by smells, end up being introduced by a change. Design degradation may be related to both technical and social aspects in collaborative code reviews. Unfortunately, there is no study that investigates if code review stakeholders, e.g, reviewers, could benefit from approaches to distinguish and predict design impactful changes with technical and/or social aspects. By analyzing 57,498 reviewed code changes from seven open-source systems, we report an investigation on prediction of design impactful changes in modern code review. We evaluated the use of six ML algorithms to predict design impactful changes. We also extracted and assessed 41 different features based on both social and technical aspects. Our results show that Random Forest and Gradient Boosting are the best algorithms. We also observed that the use of technical features results in more precise predictions. However, the use of social features alone, which are available even before the code review starts (e.g., for team managers or change assigners), also leads to highly-accurate prediction. Therefore social and/or technical prediction models can be used to support further design inspection of suspicious changes early in a code review process. Finally, we provide an enriched dataset that allows researchers to investigate the context behind design impactful changes during the code review process.},
   organization={IEEE Press},
+  note={<font color="red">To appear!</font>},
   url={https://anderson-uchoa.github.io/publications/UchoaBCOARVAPOG21.pdf},
   doi = {10.1109/MSR52588.2021.00059}
 }
