--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -1,7 +1,7 @@
 @inproceedings{uchoa2021unveiling,
   title={Unveiling Multiple Facets of Design Degradation in Modern Code Review},
   author={Uchôa, Anderson},
-  booktitle={29th ESEC/FSE},
+  booktitle={Proceedings of the 29th ACM Joint Meeting on European Software Engineering Conference and Symposium on the Foundations of Software Engineering (ESEC/FSE 2021), Athens, Greece, Mon 23 - Sat 28 August 2021},
   pages={1--5},
   note={<font color="red">To appear!</font>},
   year={2021},
